display user count on dom;

--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,8 @@
   </head>
   <body>
     <h1>Hello World!</h1>
+    <div id="connection-count"></div>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/client.js"></script>
   </body>
 </html>
